--- a/_modules/evmspec/structs/log.html
+++ b/_modules/evmspec/structs/log.html
@@ -229,7 +229,7 @@
 <span class="sd">        Topic(&#39;0x0000000000000000000000000000000000000000000000000000000000000000&#39;)</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
-    <span class="n">topics</span><span class="p">:</span> <span class="n">Tuple</span><span class="p">[</span><span class="n">Topic</span><span class="p">,</span> <span class="o">...</span><span class="p">]</span>
+    <span class="n">topics</span><span class="p">:</span> <span class="nb">tuple</span><span class="p">[</span><span class="n">Topic</span><span class="p">,</span> <span class="o">...</span><span class="p">]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    An array of 0 to 4 32-byte topics. </span>
 <span class="sd">    The first topic is the event signature and the others are indexed filters </span>
